--- a/pyKostik.tab/Manage.panel/ParameterChangeToInstant.pushbutton/bundle.yaml
+++ b/pyKostik.tab/Manage.panel/ParameterChangeToInstant.pushbutton/bundle.yaml
@@ -1,5 +1,8 @@
 title: |-
   Change Parameter
   To Instant
+
 tooltip: 
   Changes parameters type to instant for selected families
+
+context: doc-family
