--- a/pyKostik.tab/View.panel/bundle.yaml
+++ b/pyKostik.tab/View.panel/bundle.yaml
@@ -3,4 +3,5 @@ layout:
   - Crop Elevation
   - ViewToDrafting
   - ViewTitleAlignViewport
+  - ApplyViewPropertiesToOther
   - ToggleCategoryInView
