--- a/pyKostik.tab/View.panel/ApplyViewPropertiesToOther.pushbutton/bundle.yaml
+++ b/pyKostik.tab/View.panel/ApplyViewPropertiesToOther.pushbutton/bundle.yaml
@@ -5,6 +5,6 @@ title: |-
 tooltip: |-
   Applies current view visibility properties to other views.
 
-  If destination views have assigned templates,
+  If destination views have assigned template,
   properties that controlled by the template
   will not b overwritten.
