--- a/pyKostik.tab/Utils.panel/ScopeBoxNameToElemParam.pushbutton/bundle.yaml
+++ b/pyKostik.tab/Utils.panel/ScopeBoxNameToElemParam.pushbutton/bundle.yaml
@@ -1,5 +1,5 @@
 title: |-
   Scope Box 
-  To Parameter
+  to Parameter
 tooltip: |-
-  Copies scope box name to elements that intersect it.
+  Copies scope box name to elements that intersect it
