add MemeberSelectParentGroup button

--- a/pyKostik.tab/Selection.panel/Select.splitpushbutton/bundle.yaml
+++ b/pyKostik.tab/Selection.panel/Select.splitpushbutton/bundle.yaml
@@ -1,6 +1,7 @@
 layout:
   - SelectAllInView
   - GroupSelectMembers
+  - MemeberSelectParentGroup
   - AssemblySelectMembers
   - BeamSystemGetBeams
   - BeamGetBeamSystem
